# boltzio

./: .gitignore  CREDITS.md  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: protein_ligand_template.yaml
inputs/: README.md  cdPDE3A.fasta  prod-PDE3A_ensifentrine.yaml
scripts/: batch_run.py  generate.py  print_subsequence.py  renumber.py  split.py
src/boltz2/: __init__.py  cli.py  client.py  config.py  io.py  logging_config.py  parser.py  payload.py  renumber.py  utils.py
tests/: __init__.py  test_parser.py  test_payload.py  test_utils.py
